--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </a-cursor>
             </a-entity>    
         </a-entity>
-        <a-box color = red; position = "0 3 0"ammo-body="type: dynamic" ammo-shape="type: box"></a-box>
+        <a-box ammo-body="type: static" ammo-shape="type: cylinder" color = red; position = "0 3 0"ammo-body="type: dynamic" ammo-shape="type: box"></a-box>
         <a-gltf-model class="mesa" src="#mesaP" position="3.01 0 1.5" rotation="0 180 0" scale="0.05 0.05 0.05.">
         </a-gltf-model>
         <a-entity id="fileira1" position="0 0 4">
